--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-hello
+<!DOCTYPE html>
+<html lang="en-us">
+<head>
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="UTF-8">
+	<title>Save, Share and collaborate | Blocbox</title>
+
+	<!-- Google Fonts -->
+	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic|Varela+Round|Marvel:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+</head>
+<body>
+	<header>
+	 <nav class="container">
+	  <div class="one-half">
+	   <a ref="index.html" class="site-logo"><img src="images/site-logo.png" alt="Blocbox" /></a>
+	  </div>
+	  <div class="one-half">
+	   <ul>
+	    <li><a href="signin.html">Sign In</a></li>
+	    <li class="btn-outline"><a href="signup.html">Sign Up</a></li>
+	   </ul>
+	  </div>
+	 </nav>
+	 <div class="container hero">
+	  <h1>Save, share and collaborate.</h1>
+	  <p>Blocbox lets you collect and sort information.<br/>Create simple notes, store images, and add links.</p>
+	  <a href="signup.html" class="btn">Start Your Free Trial!</a>
+	  <img src="images/dashboard.png" alt="Blocbox" />
+	 </div>
+	</header>
+	<main role="main">
+	 <!-- Benefits -->
+	 <section class="benefits">
+	  <ul class="container">
+	   <li class="one-third">
+	    <h2>Create notes</h2>
+	    <p>Using Markdown, you can create simple text-based documents to save and share. You can collaborate with others to write and edit content.</p>
+	   </li>
+	   <li class="one-third">
+	    <h2>Save images</h2>
+	    <p>Are there images you find interesting enough to save? Now you have a way to organize and store those within Blocbox.</p>
+	   </li>
+	   <li class="one-third">
+	    <h2>Add links</h2>
+	    <p>Forget bookmarking sites in your browser. With Blocbox, you can add links, group them and view them from any computer.</p>
+	   </li>
+	  </ul>
+	 </section>
+	</main>
+</body>
+</html>
