--- a/index.html
+++ b/index.html
@@ -129,7 +129,17 @@
 	 		</li>
 	 	</ul>
 	 </section>
+
+	<!-- Reinforce to Sign Up -->
+    <section>
+      <div class"container">
+	  <h3>Let's get started!</h3>
+	  <p>Sign up today</p>
+	  <a href="signup.html" class="btn">Start Your Free Trial!</a>
+    	</div>
+    </section>
 	</main>
+    
 
 	<!-- Footer -->
 	<footer>
