--- a/index_new.html
+++ b/index_new.html
@@ -13,7 +13,7 @@
 	<header>
 	 <nav class="container">
 	  <div class="one-half">
-	   <a ref="index.html" class="site-logo"><img src="images/site-logo.png" alt="Blocbox" /></a>
+	   <a ref="index_new.html" class="site-logo"><img src="images/site-logo.png" alt="Blocbox" /></a>
 	  </div>
 	  <div class="one-half">
 	   <ul>
