--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	  <h1>Save, share and collaborate.</h1>
 	  <p>Blocbox lets you collect and sort information.<br/>Create simple notes, store images, and add links.</p>
 	  <a href="signup.html" class="btn">Start Your Free Trial!</a>
-	  <img src="image/dashboard.png" alt="Blocbox" />
+	  <img src="images/dashboard.png" alt="Blocbox" width="150px" height="200px" />
 	 </div>
 	</header>
 	<main role="main">
