CSS files added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 	<title>Save, Share and collaborate | Blocbox</title>
 
 	<!-- Google Fonts -->
-	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic|Varela+Round|Marvel:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic|Varela+Round' rel='stylesheet' type='text/css'>
+
+	<!-- CSS -->
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/font-awesome.css">
+	<link rel="stylesheet" href="css/animate.css">
+
 </head>
 <body>
 	<header>
@@ -23,10 +30,10 @@
 	  </div>
 	 </nav>
 	 <div class="container hero">
-	  <h1>Save, share and collaborate.</h1>
+	  <h1 class="animated rollIn">Save, share and collaborate</h1>
 	  <p>Blocbox lets you collect and sort information.<br/>Create simple notes, store images, and add links.</p>
 	  <a href="signup.html" class="btn">Start Your Free Trial!</a>
-	  <img src="images/dashboard.png" alt="Blocbox" width="150px" height="200px" />
+	  <img src="images/dashboard.png" alt="Blocbox" />
 	 </div>
 	</header>
 	<main role="main">
