CSS buttons' styles added

--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
         <p>We have many options to fit your needs. It's free to try for 30 days*, and you can always change your plan once you signed up. <br/>Here are the different features of each plan:</p>
        </div> 
        <ul class="container">
-       	<li class="one-thied">
-       		<div class="box">
-       			<h3>Casual</h3>
-       			<h4>Free</h4>
-       			<ul>
-       				<li>Up to 5 boxes</li>
-       				<li>Up to 10 collaborators</li>
-       				<li><strong>2GB</strong> of storage</li>
-       			</ul>
-       			<a href="signup.html" class="btn">Start Your Free Trial!</a>
-       		</div>
+       <li class="one-third">
+       	<div class="box">
+       		<h3>Casual</h3>
+       		<h4>Free</h4>
+       		<ul>
+       			<li>Up to 5 boxes</li>
+       			<li>Up to 10 collaborators</li>
+       			<li><strong>2GB</strong> of storage</li>
+       		</ul>
+       		<a href="signup.html" class="btn">Start Your Free Trial!</a>
+       	</div>
        	</li>
        <li class="one-third">
        	<div class="box middle">
