--- a/index.html
+++ b/index.html
@@ -41,14 +41,17 @@
 	 <section class="benefits">
 	  <ul class="container">
 	   <li class="one-third">
+	   <i class="fa fa-file-o"></i>
 	    <h2>Create notes</h2>
 	    <p>Using Markdown, you can create simple text-based documents to save and share. You can collaborate with others to write and edit content.</p>
 	   </li>
 	   <li class="one-third">
+	   <i class="fa fa-picture-o"></i>
 	    <h2>Save images</h2>
 	    <p>Are there images you find interesting enough to save? Now you have a way to organize and store those within Blocbox.</p>
 	   </li>
 	   <li class="one-third">
+	   <i class="fa fa-link"></i>
 	    <h2>Add links</h2>
 	    <p>Forget bookmarking sites in your browser. With Blocbox, you can add links, group them and view them from any computer.</p>
 	   </li>
@@ -56,7 +59,7 @@
 	 </section>
 
 	 <!-- Pricing -->
-	 <section class'"pricing">
+	 <section class="pricing">
        <div class="container">
         <h2>How much does Blocbox cost?</h2>
         <p>We have many options to fit your needs. It's free to try for 30 days*, and you can always change your plan once you signed up. <br/>Here are the different features of each plan:</p>
@@ -101,6 +104,9 @@
        	</div>
        </li>
        </ul>
+       <div class="container">
+       <p class="small">*We will not collect your credit card information until your 30-day trial has ended.</p>
+       </div>
 	 </section>
 
 	 <!-- Testimonials -->
