added two new html files

--- a/js/images.html
+++ b/js/images.html
@@ -59,26 +59,7 @@
        </div>
        <div class="content-item">
          <div class="item-box">
-         <h2><img src="http://www.airbnb.com/favicon.ico"><a href="#">airbnb.com</a></h2>
-         <p>Vacation Rentals, Homes, Apartments &amp; Rooms for Rent &mdash; Airbnb</p>
-         </div>
-       </div>
-       <div class="content-item">
-         <div class="item-box">
-         <h2><a href="#">Need to find a designer</a></h2>
-         <p>We have a one-person design team, but are ready to expand. We need to look for a second designer right now so we can continue to grow.</p>
-         <p>Put your recommendations here so we can view all of them.....</p>
-         </div>
-       </div>
-       <div class="content-item">
-         <div class="item-box">
          <img src="https://static.pexels.com/photos/6671/people-field-working-agriculture-medium.jpeg">
-         </div>
-       </div>
-       <div class="content-item">
-         <div class="item-box">
-         <h2><img class="favicon" src="https://www.yourkarma.com/favicon.ico"> <a href="#">yourkarma.com</a></h2>
-         <p>Karma Go lets you take WiFi everywhere. Pay-as-you-go for data that never expires. No contracts or monthly fees. With nationwide coverage on LTE, stay connected to the internet with all of your devices, seamlessly.</p>
          </div>
        </div>
        <div class="content-item">
@@ -88,25 +69,67 @@
        </div>
        <div class="content-item">
          <div class="item-box">
-         <h2><a href="#">Testing</a></h2>
-         <p>I love lamp.</p>
-         </div>
-       </div>
-       <div class="content-item">
-         <div class="item-box">
-         <h2><img class="favicon" src="https://www.invisionapp.com/favicon.ico"> <a href="#">invisionapp.com</a></h2>
-         <p>Free Web &amp; Mobile (iOS, Android) Prototyping and UI Mockup Tool | InVision</p>
-         </div>
-       </div>
-       <div class="content-item">
-         <div class="item-box">
          <img src="https://static.pexels.com/photos/6549/food-vacation-boats-lunch-medium.jpg">
          </div>
        </div>
        <div class="content-item">
          <div class="item-box">
-         <h2><a href="#">Why storing inspiration is great</a></h2>
-         <p>blocbox is a new tool to help collect and store your inspiration and information. From images, to links, to notes like this one, you can keep track of all your favorite things.</p>
+         <img src="http://40.media.tumblr.com/584260c6051f655b16da59653256883b/tumblr_nqx8ovsnHL1tubinno1_1280.jpg">
+         </div>
+       </div>
+       <div class="content-item">
+         <div class="item-box">
+         <img src="http://41.media.tumblr.com/3966b51da2d941f0c01a907f190ebcb9/tumblr_nqx8hsjuCl1tubinno1_1280.jpg">
+         </div>
+       </div>
+       <div class="content-item">
+         <div class="item-box">
+         <img src="http://36.media.tumblr.com/230cbd5a43b66061f4c8756a83b6ce65/tumblr_nqx7pp3iyj1tubinno1_1280.jpg">
+         </div>
+       </div>
+       <div class="content-item">
+         <div class="item-box">
+         <img src="http://41.media.tumblr.com/fe4888149efdbf13309da439b75edb09/tumblr_nqx7nbOK721tubinno1_1280.jpg">
+         </div>
+       </div>
+       <div class="content-item">
+         <div class="item-box">
+         <img src="http://41.media.tumblr.com/576f6acd892b5ce237e7948f32ff18a6/tumblr_ndyfsjWsHT1tubinno1_1280.jpg">
+         </div>
+       </div>
+       <div class="content-item">
+         <div class="item-box">
+         <img src="http://41.media.tumblr.com/758a5cb9046fde53138ad0f55527ca25/tumblr_ndyfdoR6Wp1tubinno1_1280.jpg">
+         </div>
+       </div>
+       <div class="content-item">
+         <div class="item-box">
+         <img src="https://static.pexels.com/photos/5508/climate-cold-glacier-iceberg-medium.jpg">
+         </div>
+       </div>
+       <div class="content-item">
+         <div class="item-box">
+         <img src="https://static.pexels.com/photos/5486/bird-s-eye-view-cars-crossing-crossroad-medium.jpg">
+         </div>
+       </div>
+       <div class="content-item">
+         <div class="item-box">
+         <img src="https://static.pexels.com/photos/5317/food-salad-restaurant-person-medium.jpg">
+         </div>
+       </div>
+       <div class="content-item">
+         <div class="item-box">
+         <img src="https://static.pexels.com/photos/4732/sea-houses-harbor-harbour-medium.jpg">
+         </div>
+       </div>
+       <div class="content-item">
+         <div class="item-box">
+         <img src="https://static.pexels.com/photos/4516/sky-people-clouds-crowd-medium.jpg">
+         </div>
+       </div>
+       <div class="content-item">
+         <div class="item-box">
+         <img src="https://static.pexels.com/photos/4316/technology-computer-chips-gigabyte-medium.jpg">
          </div>
        </div>
      </div> 
