--- a/js/dashboard.html
+++ b/js/dashboard.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
- <html lang="en-us">
- <head>
+<html lang="en-us">
+<head>
    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta charset="UTF-8">
- 
+   
    <title>Dashboard | Blocbox</title>
- 
-   <!-- Google Fonts -->
+
+<!-- Google Fonts -->
    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic|Varela+Round' rel='stylesheet' type='text/css'>
- 
-   <!-- CSS -->
-   <link rel="stylesheet" href="css/normalize.css">
-   <link rel="stylesheet" href="css/style.css">
-   <link rel="stylesheet" href="css/font-awesome.css">
- 
+
+<!-- CSS -->
+   <link rel="stylesheet" href="file:///Users/yoyocheng/Desktop/Blocbox/css/normalize.css">
+   <link rel="stylesheet" href="file:///Users/yoyocheng/Desktop/Blocbox/css/style.css" />
+   <link rel="stylesheet" href="file:///Users/yoyocheng/Desktop/Blocbox/css/font-awesome.css">
+   <link rel="stylesheet" href="file:///Users/yoyocheng/Desktop/Blocbox/css/animate.css">
  </head>
+
+
  <body class="dashboard">
-   <!-- LEFT NAV -->
+<!-- LEFT NAV -->
    <nav id="left-nav" class="left-nav">
-     <a href="#" class="site-logo"><img src="images/site-logo.png" /></a>
+     <a ref="#" class="site-logo"><img src="file:///Users/yoyocheng/Desktop/Blocbox/images/site-logo.png" alt="Blocbox" /></a>
      <div class="items">
        <p>Items</p>
        <ul>
@@ -37,7 +39,7 @@
      </div>
        <div class="settings">
      <img src="https://s3.amazonaws.com/uifaces/faces/twitter/rem/128.jpg">
-     <p>Joey Kirk</p>
+     <p>Yoyo Cheng</p>
      <a href="#"><i class="fa fa-cog"></i></a>
    </div>
    </nav>
@@ -54,7 +56,7 @@
      <div class="container">
        <div class="content-item">
          <div class="item-box">
-         <img src="https://static.pexels.com/photos/5923/woman-girl-teenager-wine-medium.jpg">
+         <img src="https://static.pexels.com/photos/4099/nature-animal-river-deer-medium.jpeg">
          </div>
        </div>
        <div class="content-item">
@@ -83,7 +85,7 @@
        </div>
        <div class="content-item">
          <div class="item-box">
-         <img src="https://static.pexels.com/photos/6603/landmark-bridge-cliff-california-medium.jpeg">
+         <img src="https://static.pexels.com/photos/3982/broken-car-vehicle-rust-medium.jpeg">
          </div>
        </div>
        <div class="content-item">
