active pink shadow added

--- a/js/dashboard.html
+++ b/js/dashboard.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-us">
+<style>
+
+
+
+
+a:hover {
+    background-color: pink;
+}
+
+</style>
 <head>
    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -116,4 +126,5 @@
  </main>
 
  </body>
+
  </html>
