--- a/dashboard.html
+++ b/dashboard.html
@@ -25,10 +25,15 @@ a:hover {
    <link rel="stylesheet" href="file:///Users/yoyocheng/Desktop/Blocbox/css/style.css" />
    <link rel="stylesheet" href="file:///Users/yoyocheng/Desktop/Blocbox/css/font-awesome.css">
    <link rel="stylesheet" href="file:///Users/yoyocheng/Desktop/Blocbox/css/animate.css">
+   <link rel="stylesheet" href="file:///Users/yoyocheng/Desktop/Blocbox/css/dropit.css">
+
  </head>
 
 
- <body class="dashboard">
+<body class="dashboard">
+<!-- RESPONSIVE NAV -->
+<a class="hamburger" id="menu" href="#">&#9776;</a>
+
 <!-- LEFT NAV -->
    <nav id="left-nav" class="left-nav">
      <a ref="#" class="site-logo"><img src="file:///Users/yoyocheng/Desktop/Blocbox/images/site-logo.png" alt="Blocbox" /></a>
@@ -50,7 +55,17 @@ a:hover {
        <div class="settings">
      <img src="https://s3.amazonaws.com/uifaces/faces/twitter/rem/128.jpg">
      <p>Yoyo Cheng</p>
-     <a href="#"><i class="fa fa-cog"></i></a>
+     <ul class="menu">
+            <li>
+              <a href="#"><i class="fa fa-cog"></i></a>
+              <ul>
+                  <li><a href="#"><i class="fa fa-cog"></i> Account Settings</a></li>
+                  <li><a href="#"><i class="fa fa-users"></i> Collaborators</a></li>
+                  <li><a href="#"><i class="fa fa-sign-out"></i> Sign Out</a></li>
+              </ul>
+            </li>
+          </ul>
+     
    </div>
    </nav>
 
@@ -60,7 +75,17 @@ a:hover {
      <div class="container">
        <div class="header">
          <h1>All Items</h1>
-         <a href="#" class="btn">+ Add</a>
+         <ul class="menu">
+            <li>
+              <a href="#" class="btn">+ Add</a>
+              <ul>
+                  <li><a href="#"><i class="fa fa-file-o"></i> Note</a></li>
+                  <li><a href="#"><i class="fa fa-picture-o"></i> Image</a></li>
+                  <li><a href="#"><i class="fa fa-link"></i> Link</a></li>
+              </ul>
+            </li>
+          </ul>
+          
        </div>
      </div>
      <div class="container">
@@ -124,6 +149,15 @@ a:hover {
      </div> 
    </section>
  </main>
+ <script src="js/jquery-2.1.4.min.js"></script>
+ <script src="js/dropit.js"></script>
+ <script type="text/javascript">
+     $(".menu").dropit();
+     $( "#menu" ).click(function() {     
+         $("#left-nav").toggleClass("open", 200);      
+     });
+
+   </script>
 
  </body>
 
