--- a/dashboard.html
+++ b/dashboard.html
@@ -21,11 +21,11 @@ a:hover {
    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic|Varela+Round' rel='stylesheet' type='text/css'>
 
 <!-- CSS -->
-   <link rel="stylesheet" href="/css/normalize.css">
-   <link rel="stylesheet" href="/css/style.css" />
-   <link rel="stylesheet" href="/css/font-awesome.css">
-   <link rel="stylesheet" href="/css/animate.css">
-   <link rel="stylesheet" href="/css/dropit.css">
+   <link rel="stylesheet" href="css/normalize.css">
+   <link rel="stylesheet" href="css/style.css" />
+   <link rel="stylesheet" href="css/font-awesome.css">
+   <link rel="stylesheet" href="css/animate.css">
+   <link rel="stylesheet" href="css/dropit.css">
 
  </head>
 
