logo img location changed

--- a/dashboard.html
+++ b/dashboard.html
@@ -36,7 +36,7 @@ a:hover {
 
 <!-- LEFT NAV -->
    <nav id="left-nav" class="left-nav">
-     <a ref="#" class="site-logo"><img src="file:///Users/yoyocheng/Desktop/Blocbox/images/site-logo.png" alt="Blocbox" /></a>
+     <a ref="#" class="site-logo"><img src="images/site-logo.png" alt="Blocbox" /></a>
      <div class="items">
        <p>Items</p>
        <ul>
