--- a/dashboard.html
+++ b/dashboard.html
@@ -52,10 +52,11 @@ a:hover {
          <li><a href="#"><i class="fa fa-plus-square-o"></i> Add a new box</a></li>
        </ul>
      </div>
-       <div class="settings">
+    <div class="settings">
      <img src="https://s3.amazonaws.com/uifaces/faces/twitter/rem/128.jpg">
      <p>Yoyo Cheng</p>
      <ul class="menu">
+     <li class="settings">
             <li>
               <a href="#"><i class="fa fa-cog"></i></a>
               <ul>
@@ -63,6 +64,7 @@ a:hover {
                   <li><a href="#"><i class="fa fa-users"></i> Collaborators</a></li>
                   <li><a href="#"><i class="fa fa-sign-out"></i> Sign Out</a></li>
               </ul>
+            </li>
             </li>
           </ul>
      
